Deprecation cleanup for 1.0 (#951)
* Fix dynver plugin setup
* Refactor the core module
* Refactor the protocol package
* Refactor the nodeset package
* Refactor the actors package
* Refactor the index API
* Commands refactoring
* Refactor collection operations
* Refactor test tags and auth
* Base API & commands
* Refactor Cursor
* Refactor Driver & Connection, Collection & DB
* Refactor Read preference
* Refactor Query builders
* Find and modify operations
* Refactor BatchCommands and aggregation
* Clean up Scala 2.10 & tests
* More cursor refactoring
* Refactor BSON serialization
* Refactor Error
* Command refactoring
* BSON cleanup
* More cleanup and WriteConcern/Collation refactoring
* More query builder refactoring
* Various refactoring
* Insert command refactoring
* Refactor Delete{Ops,Command}
* Refactor UpdateCommand
* Refactor FindAndModify
* Refactor AggregationFramework
* Count command cleanup
* Refactor createUser command
* Command refactoring
* Refactor write results
* Refactor connection options
* Fix compilation warning and make it fatal
* Update the CI tooling
* Collation refactoring
* More refactoring to restrict the public API surface
* Refactor query builder with CursorOptions
* Remove specific serverStatus command
* More aggregation & test refactoring
* Refactor serialization dependent write result
* Refactor isMaster
* Refactor actor system
* Refactor Node
* Refactor core command/authentication result
* Fix Scaladoc
* Remove useless `ok` field from the public API for WriteResult
* Refactor CI with CircleCI
* Minor refactoring and update Scaladoc
* Remove BoxedAnyVal and runValueCommand
* Setup scapegoat
* Fix Scapegoat errors in Core
* Fix code smells after Scapegoat
* Refactor ChangeStream (offset)
* Atlas Search aggregation; Term operator, Text operator, Phrase operator, Near operator, Wildcard operator, Regex operator, Compound operator, Range operator, Query string operator
* Synchroni