@@ -1,13 +1,14 @@
-JVM_MAX_MEM="2048M"
+JVM_MAX_MEM="1G"
 
-# See .jvmopts
-JVM_OPTS="-Xms$JVM_MAX_MEM -Xmx$JVM_MAX_MEM"
+JAVA_MAJOR=`java -version 2>&1 | head -n 1 | cut -d '"' -f 2 | sed -e 's/\.[0-9a-zA-Z_]*$//'`
 
-if [ `echo "$JAVA_HOME" | grep java-7-oracle | wc -l` -eq 1 -o \
-     `echo "$JAVA_HOME" | grep 1.7 | wc -l` -eq 1 ]; then
-    JVM_OPTS="$JVM_OPTS -XX:PermSize=512M -XX:MaxPermSize=512M"
+if [ "v$JAVA_MAJOR" = "v10.0" -o "v$JAVA_MAJOR" = "v11.0" ]; then
+  JVM_OPTS="-XX:+UseContainerSupport -XX:MaxRAMPercentage=70"
 else
-    JVM_OPTS="$JVM_OPTS -XX:MetaspaceSize=512M -XX:MaxMetaspaceSize=512M"
+  JVM_MAX_MEM="1760M" #1632M"
+  JVM_OPTS="-Xmx$JVM_MAX_MEM -XX:ReservedCodeCacheSize=192m"
 fi
 
-export _JAVA_OPTIONS=""
+#JVM_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
+
+export _JAVA_OPTIONS="$JVM_OPTS"
